<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/accountBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/account_title"
        android:textStyle="bold"
        android:textSize="@dimen/account_title"
        android:textColor="@color/accountTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login_out"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_login_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@color/accountBackground"
                app:layout_constraintBottom_toBottomOf="@+id/ok" />

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/r_rect_red"
                app:layout_constraintEnd_toStartOf="@+id/ok"
                app:layout_constraintHorizontal_bias="0.80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/like_"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/like"
                app:layout_constraintStart_toStartOf="@+id/like"
                app:layout_constraintTop_toTopOf="@+id/like" />

            <ImageView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/r_rect_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/ok_"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ok"
                app:layout_constraintStart_toStartOf="@+id/ok"
                app:layout_constraintTop_toTopOf="@+id/ok" />

            <ImageView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/r_rect_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.20"
                app:layout_constraintStart_toEndOf="@+id/ok"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/message_"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/message"
                app:layout_constraintStart_toStartOf="@+id/message"
                app:layout_constraintTop_toTopOf="@+id/message" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accountBackground">

            <TextView
                android:id="@+id/nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/nickName"
                android:textColor="@color/nickName"
                android:textSize="@dimen/nick_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/address"
                android:textColor="@color/address"
                android:textSize="@dimen/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nick_name" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/address"
                app:layout_constraintEnd_toStartOf="@+id/address"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/address"
                app:srcCompat="@mipmap/pin_" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accountBackground"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/followeds_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/followeds_num"
            android:textStyle="bold"
            android:textSize="@dimen/num"
            android:textColor="@color/num"
            app:layout_constraintBottom_toTopOf="@+id/followeds"
            app:layout_constraintEnd_toEndOf="@+id/followeds"
            app:layout_constraintStart_toStartOf="@+id/followeds" />

        <TextView
            android:id="@+id/followeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/followeds"
            android:textSize="@dimen/text"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/event_count"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/eventCount_num"
            android:textStyle="bold"
            android:textSize="@dimen/num"
            android:textColor="@color/num"
            app:layout_constraintBottom_toTopOf="@+id/event_count"
            app:layout_constraintEnd_toEndOf="@+id/event_count"
            app:layout_constraintStart_toStartOf="@+id/event_count" />

        <TextView
            android:id="@+id/event_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/eventCount"
            android:textSize="@dimen/text"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/follows_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/follows_num"
            android:textStyle="bold"
            android:textSize="@dimen/num"
            android:textColor="@color/num"
            app:layout_constraintBottom_toTopOf="@+id/follows"
            app:layout_constraintEnd_toEndOf="@+id/follows"
            app:layout_constraintStart_toStartOf="@+id/follows" />

        <TextView
            android:id="@+id/follows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/follows"
            android:textSize="@dimen/text"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>